--- a/src/app/admin/admin.css
+++ b/src/app/admin/admin.css
@@ -15,6 +15,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: sans-serif;
 }
 .admin-header{
     position: relative;
