--- a/src/app/admin/admin.css
+++ b/src/app/admin/admin.css
@@ -58,6 +58,41 @@ a.sidebar.selected{
     flex: 1;
     padding: 10px;
 }
+.loader{
+    z-index: 999;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #0007;
+}
+.loader-inner{
+    width: 50px;
+    height: 50px;
+    border-width: 10px;
+    border-style: solid;
+    border-top-color: #123;
+    border-bottom-color: #123;
+    border-left-color: #0000;
+    border-right-color: #0000;
+    border-radius: 50%;
+    animation: loader-spin 1s infinite linear;
+    display: flex;
+    /*align-items: center;*/
+    /*justify-content: center;*/
+}
+@keyframes loader-spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
 /*==============================*/
 .d-flex{
     display: flex;
